[package]
name = "rs-websocket-tester"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["raw_value"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
futures = "0.3"
tokio-tungstenite = "0.17"
public-ip = "0.2"
url = "2.5"

[dev-dependencies]
test-case = "3.3.1"

[lib]
name = "wslib"
path = "src/lib.rs"


[[bin]]
name = "rs-ws-client"
path = "src/client/main.rs"

[[bin]]
name = "rs-ws-server"
path = "src/server/main.rs"
